# jax-pn

./: .gitignore  README.md  pyproject.toml
src/bbax/: DPN.py  FEM1D.py  Neutron.py  PN.py  __init__.py  fem_1d.py
src/jax_pn/: ADPN.py  DPN.py  FEM1D.py  Neutron.py  PN.py  __init__.py
tests/: ad_pn.ipynb  adjoint_anisotropic.ipynb  adjoint_breeding_blanket copy.ipynb  adjoint_breeding_blanket.ipynb  adjoint_opt_breeding_blanket.ipynb  adjoint_reed copy.ipynb  adjoint_reed.ipynb  adjoint_reed_testing.ipynb  anisotropic copy.ipynb  anisotropic.ipynb  breeding_blanket.ipynb  breeding_blanket_data.py  douple_pn.ipynb  extract_data.ipynb  reed.ipynb
